--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.learn.iet-framework.authoring": "1.5.2",
     "com.unity.memoryprofiler": "1.1.9",
     "com.unity.multiplayer.center": "1.0.1",
+    "com.unity.probuilder": "6.0.8",
     "com.unity.recorder": "5.1.3",
     "com.unity.render-pipelines.universal": "17.3.0",
     "com.unity.render-pipelines.universal-config": "17.0.3",
